# quiz-back

./: .env.example  .pylintrc  pyproject.toml
src/: manage.py
src/core/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
src/core/migrations/: 0001_initial.py  0002_ranking.py  0003_alter_quizpergunta_resposta.py  0004_alter_ranking_options_alter_ranking_pontuacao_and_more.py  0004_alter_ranking_pontuacao.py  0005_foto.py  0006_alter_foto_foto.py
src/core/utils/: areas_conteudos.py
src/quiz_back/: asgi.py  settings.py  urls.py  wsgi.py
